tests/negative/Internal/Positivity/E2.juvix
module E2;

open import NegParam;

type D :=
d : T D -> D;

end;
